--- a/index.html
+++ b/index.html
@@ -1,245 +1,21 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>ARTEMIS • Gestion des stocks</title>
-  <link rel="icon" href="assets/logo.png" />
-  <link rel="stylesheet" href="styles.css" />
-  <!-- SheetJS for Excel -->
-  <script defer src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
-  <!-- html5-qrcode (barcode/QR scan) -->
-  <script defer src="https://unpkg.com/html5-qrcode@2.3.10/html5-qrcode.min.js"></script>
+  <meta charset="UTF-8">
+  <title>Connexion - GESTION DE STOCK</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-  <div id="login-screen" class="screen login-screen">
-    <div class="login-card">
-      <img src="assets/logo.png" class="logo" alt="ARTEMIS" />
-      <h1>ARTEMIS</h1>
-      <h2>Gestion des stocks</h2>
-      <form id="login-form">
-        <label>Identifiant</label>
-        <input type="text" id="login" autocomplete="username" required />
-        <label>Mot de passe</label>
-        <input type="password" id="password" autocomplete="current-password" required />
-        <button type="submit" class="btn primary">Connexion</button>
-      </form>
-      <p class="hint"></p>
-    </div>
+<body class="login-page">
+  <div class="login-container">
+    <img src="assets/logo_artemis.png" alt="Logo Artemis" class="logo">
+    <h2>Connexion</h2>
+    <form id="loginForm">
+      <input type="text" id="username" placeholder="Identifiant" required>
+      <input type="password" id="password" placeholder="Mot de passe" required>
+      <button type="submit">Se connecter</button>
+    </form>
+    <p id="loginError" class="error"></p>
   </div>
-
-  <div id="app" class="hidden">
-    <header class="topbar">
-      <div class="left">
-        <img src="assets/logo.png" class="logo small" alt="ARTEMIS" />
-        <div>
-          <div class="app-title">ARTEMIS — Gestion des stocks</div>
-          <div class="badge" id="under-threshold-badge" title="Articles sous seuil">0</div>
-        </div>
-      </div>
-      <div class="center">
-        <select id="agency-select" class="agency-select"></select>
-      </div>
-      <div class="right">
-        <span id="user-label"></span>
-        <button id="logout-btn" class="btn">Déconnexion</button>
-      </div>
-    </header>
-
-    <nav class="tabs">
-      <button class="tab-btn active" data-tab="catalogue">Catalogue</button>
-      <button class="tab-btn" data-tab="mouvements">Mouvements</button>
-      <button class="tab-btn" data-tab="stats">Stats</button>
-      <button class="tab-btn admin-only" data-tab="importexport">Import/Export</button>
-      <button class="tab-btn admin-only" data-tab="admin">Admin</button>
-    </nav>
-
-    <main>
-      <!-- CATALOGUE -->
-      <section id="tab-catalogue" class="tab active">
-        <div class="toolbar">
-          <input type="text" id="search" placeholder="Rechercher référence/nom/code-barres…" />
-          <select id="category-filter">
-            <option value="">Toutes catégories</option>
-            <option>Uniformes</option>
-            <option>Tenues EPI</option>
-            <option>Matériel de communication</option>
-            <option>Matériel Roulant</option>
-            <option>Matériel informatique</option>
-            <option>Licences informatiques</option>
-            <option>Divers</option>
-          </select>
-          <label class="chk"><input type="checkbox" id="filter-reassort" /> À réassort</label>
-          <button id="scan-btn" class="btn">Scanner</button>
-          <button id="add-product-btn" class="btn primary admin-only">Nouveau produit</button>
-          <button id="reassort-btn" class="btn">Proposer un réassort</button>
-        </div>
-        <div id="catalogue-table" class="table"></div>
-      </section>
-
-      <!-- MOUVEMENTS -->
-      <section id="tab-mouvements" class="tab">
-        <div class="panel">
-          <h3>Nouveau mouvement</h3>
-          <div class="grid-2">
-            <div>
-              <label>Type</label>
-              <select id="mv-type">
-                <option value="in">Entrée</option>
-                <option value="out">Sortie</option>
-                <option value="transfer">Transfert</option>
-              </select>
-            </div>
-            <div>
-              <label>Produit</label>
-              <input type="text" id="mv-product-search" placeholder="référence / nom / code-barres" />
-              <div id="mv-product-results" class="dropdown"></div>
-            </div>
-            <div>
-              <label>Taille</label>
-              <select id="mv-size">
-                <option value="">—</option>
-                <option>XS</option><option>S</option><option>M</option><option>L</option><option>XL</option><option>XXL</option><option>3XL</option>
-              </select>
-            </div>
-            <div>
-              <label>Quantité</label>
-              <input type="number" id="mv-qty" min="1" value="1" />
-            </div>
-            <div>
-              <label>De (agence)</label>
-              <select id="mv-from"></select>
-            </div>
-            <div>
-              <label>Vers (agence)</label>
-              <select id="mv-to"></select>
-            </div>
-            <div class="full">
-              <button id="mv-submit" class="btn primary">Valider le mouvement</button>
-            </div>
-          </div>
-        </div>
-        <div class="panel">
-          <h3>Historique (agence courante)</h3>
-          <div class="toolbar">
-            <input type="date" id="mv-date-from"> 
-            <input type="date" id="mv-date-to">
-            <button id="mv-refresh" class="btn">Actualiser</button>
-          </div>
-          <div id="mouvements-table" class="table"></div>
-        </div>
-      </section>
-
-      <!-- STATS -->
-      <section id="tab-stats" class="tab">
-        <div class="toolbar">
-          <input type="date" id="st-date-from"> 
-          <input type="date" id="st-date-to">
-          <button id="st-refresh" class="btn">Calculer</button>
-          <button id="st-export" class="btn">Export Excel</button>
-        </div>
-        <div id="stats-summary" class="summary"></div>
-        <div id="stats-table" class="table"></div>
-      </section>
-
-      <!-- IMPORT / EXPORT -->
-      <section id="tab-importexport" class="tab">
-        <div class="panel">
-          <h3>Export</h3>
-          <button id="export-products" class="btn">Produits (Excel)</button>
-          <button id="export-products-json" class="btn">Produits (JSON)</button>
-          <button id="export-movements" class="btn">Mouvements agence (Excel)</button>
-        </div>
-        <div class="panel">
-          <h3>Import (Produits)</h3>
-          <p>Importer un Excel avec une feuille <b>Produits</b> (colonnes : Reference, Nom, Categorie, PrixAchat, Vendeur, CodeBarres, Affectation, SeuilGlobal, XS,S,M,L,XL,XXL,3XL).</p>
-          <input type="file" id="import-products-file" accept=".xlsx,.xls" />
-          <button id="import-products" class="btn primary">Importer</button>
-        </div>
-      </section>
-
-      <!-- ADMIN -->
-      <section id="tab-admin" class="tab">
-        <div class="grid-2">
-          <div class="panel">
-            <h3>Agences</h3>
-            <div class="toolbar">
-              <input type="text" id="ag-name" placeholder="Nom agence" />
-              <button id="ag-add" class="btn">Ajouter</button>
-            </div>
-            <div id="agencies-table" class="table"></div>
-          </div>
-          <div class="panel">
-            <h3>Utilisateurs</h3>
-            <div class="grid-2">
-              <input type="text" id="us-login" placeholder="Identifiant" />
-              <input type="password" id="us-password" placeholder="Mot de passe" />
-              <select id="us-role">
-                <option value="agence">agence</option>
-                <option value="admin">admin</option>
-              </select>
-              <select id="us-agency"></select>
-              <button id="us-add" class="btn">Créer/Mettre à jour</button>
-            </div>
-            <div id="users-table" class="table"></div>
-          </div>
-        </div>
-        <div class="panel danger">
-          <h3>Purger l'historique</h3>
-          <button id="purge-history" class="btn danger">Supprimer tous les mouvements</button>
-        </div>
-      </section>
-    </main>
-  </div>
-
-  <!-- Barcode scan modal -->
-  <div id="scan-modal" class="modal hidden">
-    <div class="modal-content">
-      <div id="qr-reader" style="width: 480px; max-width: 90vw"></div>
-      <button id="scan-close" class="btn">Fermer</button>
-    </div>
-  </div>
-
-  <!-- Product editor modal -->
-  <div id="product-modal" class="modal hidden">
-    <div class="modal-content wide">
-      <h3 id="pm-title">Produit</h3>
-      <div class="grid-2">
-        <input id="pm-reference" placeholder="Référence *" />
-        <input id="pm-name" placeholder="Nom *" />
-        <select id="pm-category">
-          <option>Uniformes</option>
-          <option>Tenues EPI</option>
-          <option>Matériel de communication</option>
-          <option>Matériel Roulant</option>
-          <option>Matériel informatique</option>
-          <option>Licences informatiques</option>
-          <option>Divers</option>
-        </select>
-        <input id="pm-price" type="number" step="0.01" placeholder="Prix d'achat (€)" />
-        <input id="pm-vendor" placeholder="Revendeur" />
-        <input id="pm-barcode" placeholder="Code-barres/QR" />
-        <input id="pm-affect" placeholder="Affectation (texte)" />
-        <input id="pm-seuil" type="number" min="0" placeholder="Seuil mini global" />
-      </div>
-      <div class="grid-7 sizes">
-        <label>Seuils par taille :</label>
-        <input id="pm-xs" type="number" min="0" placeholder="XS" />
-        <input id="pm-s" type="number" min="0" placeholder="S" />
-        <input id="pm-m" type="number" min="0" placeholder="M" />
-        <input id="pm-l" type="number" min="0" placeholder="L" />
-        <input id="pm-xl" type="number" min="0" placeholder="XL" />
-        <input id="pm-xxl" type="number" min="0" placeholder="XXL" />
-        <input id="pm-3xl" type="number" min="0" placeholder="3XL" />
-      </div>
-      <div class="toolbar">
-        <button id="pm-save" class="btn primary">Enregistrer</button>
-        <button id="pm-cancel" class="btn">Annuler</button>
-        <button id="pm-delete" class="btn danger admin-only">Supprimer</button>
-      </div>
-    </div>
-  </div>
-
-  <script type="module" src="app.js"></script>
+  <script src="login.js"></script>
 </body>
 </html>
